resolução da prova do 1º bimestre

--- a/index.html
+++ b/index.html
@@ -7,10 +7,62 @@
 </head>
 <body>
     <h1>Página Principal</h1>
+<h1>Equipes Fórmula 1 - 2024</h1>
+<ol>
+    <li>Ferrari
+        <ul type="square">
+            <li>Charles <b>Leclerc</b></li>
+            <li>Carlos <b>Sainz</b></li>
+        </ul>
+    </li>
+    <li>McLaren
+        <ul type="square">
+            <li>Oscar <b>Piastri</b></li>
+            <li>Lando <b>Norris</b></li>
+        </ul>
+    </li>
+</ol>
 
-    <p>Ir para 
-        <a href="pagina2.html">página 2</a>
-    </p>
+
+    <hr>
+
+<h1>Fórmula 1 - 2024</h1>
+<h2>GP da Holanda</h2>
+<h3>Data 25/08/2024</h3>
+
+<table border="1">
+    <tr>
+        <th colspan="5">Resultados</th>
+    </tr>
+    <tr>
+        <th>Pos</th>
+        <th colspan="2">Piloto</th>
+        <th>Tempo</th>
+        <th>Pts</th>
+    </tr>
+    <tr>
+        <td rowspan="2">1</td>
+        <td rowspan="2"><img src="imagens/inglaterra.png"></td>
+        <td >L. Norris</td>
+        <td rowspan="2">1:30:45.519</td>
+        <td rowspan="2">26</td>
+    </tr>
+    <tr>
+        <td>McLaren #4</td>
+        
+    </tr>
+    <tr>
+        <td rowspan="2">2</td>
+        <td rowspan="2"><img src="/imagens/holanda.png"></td>
+        <td >M Verstappen</td>
+        <td rowspan="2">+22.896s</td>
+        <td rowspan="2">18</td>
+    </tr>
+    <tr>
+        <td>Red Bull #1</td>
+    </tr>
+
+</table>
     
 </body>
 </html>
